# calc-math-library

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: calc_math_lib.hpp
src/: calc_math_lib.cpp
